--- a/.github/workflows/docker-base.yml
+++ b/.github/workflows/docker-base.yml
@@ -43,7 +43,7 @@ jobs:
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.CR_PAT }}
 
-    - name: Build and push
+    - name: Build and push Beamdog base image
       id: docker_build
       uses: docker/build-push-action@v2
       with:
@@ -63,6 +63,69 @@ jobs:
           ${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}
           ghcr.io/${{ github.repository_owner }}/nwnxee-base:latest
           ghcr.io/${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}
+
+    - name: Build and push community buster base image
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./base.Dockerfile
+        build-args: BD_NWSERVER_IMAGE=urothis/nwnee-community-images:nwserver-${{ steps.vars.outputs.nwn_build }}.${{ steps.vars.outputs.nwn_build_revision }}-debian-buster
+        push: true
+        labels: |
+          org.opencontainers.image.title=NWNX:EE Base
+          org.opencontainers.image.description=This image is the base for NWNX:EE, it includes all the dependencies required to run NWNX and all plugins. It is used as an intermediary container before the freshly built binaries are placed.
+          org.opencontainers.image.author=NWNX:EE Community
+          org.opencontainers.image.source=https://github.com/${{ github.repository_owner }}/unified
+          org.opencontainers.image.created=${{ steps.vars.outputs.created }}
+          org.opencontainers.image.revision=${{ github.sha }}
+        tags: |
+          ${{ github.repository_owner }}/nwnxee-base:latest-debian-buster
+          ${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}-debian-buster
+          ghcr.io/${{ github.repository_owner }}/nwnxee-base:latest-debian-buster
+          ghcr.io/${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}-debian-buster
+
+    - name: Build and push community bullseye base image
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./base.Dockerfile
+        build-args: BD_NWSERVER_IMAGE=beamdog/nwserver:${{ steps.vars.outputs.nwn_build }}.${{ steps.vars.outputs.nwn_build_revision }}-debian-bullseye
+        push: true
+        labels: |
+          org.opencontainers.image.title=NWNX:EE Base
+          org.opencontainers.image.description=This image is the base for NWNX:EE, it includes all the dependencies required to run NWNX and all plugins. It is used as an intermediary container before the freshly built binaries are placed.
+          org.opencontainers.image.author=NWNX:EE Community
+          org.opencontainers.image.source=https://github.com/${{ github.repository_owner }}/unified
+          org.opencontainers.image.created=${{ steps.vars.outputs.created }}
+          org.opencontainers.image.revision=${{ github.sha }}
+        tags: |
+          ${{ github.repository_owner }}/nwnxee-base:latest-debian-bullseye
+          ${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}-debian-bullseye
+          ghcr.io/${{ github.repository_owner }}/nwnxee-base:latest-debian-bullseye
+          ghcr.io/${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}-debian-bullseye   
+
+    - name: Build and push community focal base image
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./base.Dockerfile
+        build-args: BD_NWSERVER_IMAGE=beamdog/nwserver:${{ steps.vars.outputs.nwn_build }}.${{ steps.vars.outputs.nwn_build_revision }}-ubuntu-focal
+        push: true
+        labels: |
+          org.opencontainers.image.title=NWNX:EE Base
+          org.opencontainers.image.description=This image is the base for NWNX:EE, it includes all the dependencies required to run NWNX and all plugins. It is used as an intermediary container before the freshly built binaries are placed.
+          org.opencontainers.image.author=NWNX:EE Community
+          org.opencontainers.image.source=https://github.com/${{ github.repository_owner }}/unified
+          org.opencontainers.image.created=${{ steps.vars.outputs.created }}
+          org.opencontainers.image.revision=${{ github.sha }}
+        tags: |
+          ${{ github.repository_owner }}/nwnxee-base:latest-ubuntu-focal
+          ${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}-ubuntu-focal
+          ghcr.io/${{ github.repository_owner }}/nwnxee-base:latest-ubuntu-focal
+          ghcr.io/${{ github.repository_owner }}/nwnxee-base:${{ steps.vars.outputs.sha_short }}-ubuntu-focal
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
